David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Details_on_Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>Details_on_Corrective_Action__c</fullName>
    <label>Details on Corrective Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>