David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Device_Current__c.field-meta.xml
<CustomField>
    <fullName>Device_Current__c</fullName>
    <label>Device Current</label>
    <length>10</length>
    <type>Text</type>
</CustomField>