David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Discuss_Customer_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Customer_Concerns__c</fullName>
    <label>Discuss Customer Concerns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Options_for_PMR_Form</valueSetName>
    </valueSet>
</CustomField>