David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Display_Characteristics_Completed__c.field-meta.xml
<CustomField>
    <fullName>Display_Characteristics_Completed__c</fullName>
    <label>Display Characteristics Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>