David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Display_Check_False__c.field-meta.xml
<CustomField>
    <fullName>Display_Check_False__c</fullName>
    <formula>IF(TEXT(Display_Characteristics_Completed__c) = &apos;Not Completed&apos;, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Check - False</label>
    <type>Checkbox</type>
</CustomField>