David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Display_Field_No__c.field-meta.xml
<CustomField>
    <fullName>Display_Field_No__c</fullName>
    <formula>IF(TEXT( Corrective_Action_Required__c ) = &apos;No&apos;, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Field - No</label>
    <type>Checkbox</type>
</CustomField>