David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Download_User_and_Tech_Logs_Num_Cycles__c.field-meta.xml
<CustomField>
    <fullName>Download_User_and_Tech_Logs_Num_Cycles__c</fullName>
    <label>Download User and Tech Logs Num Cycles</label>
    <type>TextArea</type>
</CustomField>