David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Downtime_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Downtime_Business_Hours__c</fullName>
    <label>Downtime (Business Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>