David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Downtime_Calendar_Hours__c.field-meta.xml
<CustomField>
    <fullName>Downtime_Calendar_Hours__c</fullName>
    <description>Calculates the duration, in hours, between &quot;Downtime Start&quot; and &quot;Downtime End&quot;.</description>
    <formula>IF(
AND(
NOT(ISBLANK(Downtime_Start__c)),
NOT(ISBLANK(Downtime_End__c))
),
(Downtime_End__c - Downtime_Start__c) * 24,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How many hours (including non-business hours) the equipment was unavailable for.</inlineHelpText>
    <label>Downtime (Calendar Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>