David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Downtime_End__c.field-meta.xml
<CustomField>
    <fullName>Downtime_End__c</fullName>
    <description>Records the date and time when the equipment was restored to service after being down.</description>
    <inlineHelpText>Enter the date and time when the equipment was restored and confirmed as operational.</inlineHelpText>
    <label>Downtime End</label>
    <type>DateTime</type>
</CustomField>