David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Downtime_Start__c.field-meta.xml
<CustomField>
    <fullName>Downtime_Start__c</fullName>
    <description>Records the exact date and time when the customer&apos;s equipment becaume unavailable due to a break.</description>
    <inlineHelpText>Enter the date and time when the equipment was first reported as down to the Service Team.</inlineHelpText>
    <label>Downtime Start</label>
    <type>DateTime</type>
</CustomField>