David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Email_for_shipping_confirmation__c.field-meta.xml
<CustomField>
    <fullName>Email_for_shipping_confirmation__c</fullName>
    <formula>Opportunity__r.E_mail_for_Shipping_Confirmation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email for Shipping Confirmation</label>
    <type>Text</type>
</CustomField>