David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Email_shipping_form__c.field-meta.xml
<CustomField>
    <fullName>Email_shipping_form__c</fullName>
    <label>Email shipping form</label>
    <type>DateTime</type>
</CustomField>