David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Engineer_ETA__c.field-meta.xml
<CustomField>
    <fullName>Engineer_ETA__c</fullName>
    <label>Engineer ETA</label>
    <type>DateTime</type>
</CustomField>