David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Engineer_Identified_Opp__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Identified_Opp__c</fullName>
    <label>Engineer Identified Opp #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>