David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Engineer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Notes__c</fullName>
    <inlineHelpText>Pulled from the Contract Line Item on Work Order creation.</inlineHelpText>
    <label>Engineer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>