David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Engineer_Signature__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Signature__c</fullName>
    <label>Engineer Signature</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>