David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Entitlement_Type__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Type__c</fullName>
    <label>Entitlement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Service</fullName>
            </value>
            <value>
                <fullName>Accidental Coverage</fullName>
            </value>
            <value>
                <fullName>Tech Support</fullName>
            </value>
            <value>
                <fullName>Service Hours</fullName>
            </value>
            <value>
                <fullName>Safety Testing</fullName>
            </value>
            <value>
                <fullName>Probe Replacement/Exchange</fullName>
            </value>
            <value>
                <fullName>Preventative Maintenance</fullName>
            </value>
            <value>
                <fullName>Transducer Coverage- Wear/Failure</fullName>
            </value>
            <value>
                <fullName>Parts Coverage</fullName>
            </value>
            <value>
                <fullName>Labor &amp; Travel</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Transducer Damage</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Loaner Coverage</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Service Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>