David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/errors_within_the_last_10_cycles_Com__c.field-meta.xml
<CustomField>
    <fullName>errors_within_the_last_10_cycles_Com__c</fullName>
    <label>errors within the last 10 cycles Com</label>
    <type>TextArea</type>
</CustomField>