David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/errors_within_the_last_10_cycles_Num_Cyc__c.field-meta.xml
<CustomField>
    <fullName>errors_within_the_last_10_cycles_Num_Cyc__c</fullName>
    <label>errors within the last 10 cycles Num Cyc</label>
    <type>TextArea</type>
</CustomField>