David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Examine_PCB_connectors__c.field-meta.xml
<CustomField>
    <fullName>Examine_PCB_connectors__c</fullName>
    <label>Examine PCB connectors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trophon_Form_Options</valueSetName>
    </valueSet>
</CustomField>