David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Examine_PCB_connectors_Com__c.field-meta.xml
<CustomField>
    <fullName>Examine_PCB_connectors_Com__c</fullName>
    <label>Examine PCB connectors Com</label>
    <type>TextArea</type>
</CustomField>