David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Exhaust_FlowRate_RPM_Max__c.field-meta.xml
<CustomField>
    <fullName>Exhaust_FlowRate_RPM_Max__c</fullName>
    <label>Exhaust FlowRate_RPM_Max</label>
    <type>TextArea</type>
</CustomField>