David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Expected_Removal_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Removal_Date__c</fullName>
    <label>Expected Removal Date</label>
    <type>Date</type>
</CustomField>