David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Orders (Facility)</relationshipLabel>
    <relationshipName>Mechanical_Service_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>