David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Field_Service_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Field_Service_Engineer__c</fullName>
    <label>Field Service Engineer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trisonics_Field_Service_Engineers</valueSetName>
    </valueSet>
</CustomField>