David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/First_FSE__c.field-meta.xml
<CustomField>
    <fullName>First_FSE__c</fullName>
    <formula>IF( INCLUDES(Field_Service_Engineer__c, &quot;Brad Lawson&quot;), &quot;Brad Lawson&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Hobie Sears&quot;), &quot;Hobie Sears&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;John Steffen&quot;), &quot;John Steffen&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Nicholas Haralam&quot;), &quot;Nicholas Haralam&quot;,  IF(INCLUDES(Field_Service_Engineer__c, &quot;Alan Adamson&quot;), &quot;Alan Adamson&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Andrew JayStewart&quot;), &quot;Andrew JayStewart&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Anthony Ficuciello&quot;), &quot;Anthony Ficuciello&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Antony Farinas&quot;), &quot;Antony Farinas&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Augustine Grimes&quot;), &quot;Augustine Grimes&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Bob Loucks&quot;), &quot;Bob Loucks&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Brad League&quot;), &quot;Brad League&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Carlos Driver&quot;), &quot;Carlos Driver&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Chris Stacey&quot;), &quot;Chris Stacey&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Damian Ramirez&quot;), &quot;Damian Ramirez&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Dave Nye&quot;), &quot;Dave Nye&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Eddie Smith&quot;), &quot;Eddie Smith&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Fred Hui&quot;), &quot;Fred Hui&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Gary Trotter&quot;), &quot;Gary Trotter&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Greg Gribble&quot;), &quot;Greg Gribble&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Jacqueline Browning&quot;), &quot;Jacqueline Browning&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Jonathan Rodriguez&quot;), &quot;Jonathan Rodriguez&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Jonathan Vargas&quot;), &quot;Jonathan Vargas&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Jose Paez&quot;), &quot;Jose Paez&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Maurice Jolly&quot;), &quot;Maurice Jolly&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Michael McAuliffe&quot;), &quot;Michael McAuliffe&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Mike Justice&quot;), &quot;Mike Justice&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Nathan Marcy&quot;), &quot;Nathan Marcy&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Rafael Ardila&quot;), &quot;Rafael Ardila&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Ryan Zuch&quot;), &quot;Ryan Zuch&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Scott Brandt&quot;), &quot;Scott Brandt&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Scott Fanks&quot;), &quot;Scott Fanks&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Selwyn Delgado&quot;), &quot;Selwyn Delgado&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Sharon King&quot;), &quot;Sharon King&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Shawn Zelesnick&quot;), &quot;Shawn Zelesnick&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Stephen McAuliffe&quot;), &quot;Stephen McAuliffe&quot;, IF(INCLUDES(Field_Service_Engineer__c, &quot;Tim Maltby&quot;), &quot;Tim Maltby&quot;,&quot;&quot;))))))))))))))))))))))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First FSE</label>
    <type>Text</type>
</CustomField>