David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/FlowRate_RPM_Min__c.field-meta.xml
<CustomField>
    <fullName>FlowRate_RPM_Min__c</fullName>
    <label>FlowRate_RPM_Min</label>
    <type>TextArea</type>
</CustomField>