David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Follow_Up_Task__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Task__c</fullName>
    <description>Added during EU acquisition. Will be used to input follow up task noted on work orders.</description>
    <label>Follow Up Task</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>