David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/FSE_Email__c.field-meta.xml
<CustomField>
    <fullName>FSE_Email__c</fullName>
    <label>FSE Email</label>
    <type>Email</type>
</CustomField>