David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/FSL_Opp_Type__c.field-meta.xml
<CustomField>
    <fullName>FSL_Opp_Type__c</fullName>
    <description>02/09/2026 (BW) - Holds the type of work order that the engineer originally set it up for</description>
    <label>FSL Opp Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Probe Repair</fullName>
            </value>
            <value>
                <fullName>Probe Sale</fullName>
            </value>
            <value>
                <fullName>Part Sale</fullName>
            </value>
            <value>
                <fullName>System Warranty</fullName>
            </value>
            <value>
                <fullName>Part Warranty</fullName>
            </value>
            <value>
                <fullName>Probe Warranty</fullName>
            </value>
            <value>
                <fullName>Preventative Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>