David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/FSR_Attached__c.field-meta.xml
<CustomField>
    <fullName>FSR_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FSR Attached</label>
    <type>Checkbox</type>
</CustomField>