David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/FSR_Date__c.field-meta.xml
<CustomField>
    <fullName>FSR_Date__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSR Date</label>
    <type>Date</type>
</CustomField>