David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Hard_down__c.field-meta.xml
<CustomField>
    <fullName>Hard_down__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the system hard down?</inlineHelpText>
    <label>Hard down?</label>
    <type>Checkbox</type>
</CustomField>