David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Hardware_Revision__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Revision__c</fullName>
    <label>Hardware Revision</label>
    <length>50</length>
    <type>Text</type>
</CustomField>