David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Hospital_Asset_CL__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Asset_CL__c</fullName>
    <formula>Contract_Line_Item__r.Hospital_Asset_Number__c</formula>
    <label>Hospital Asset (CL)</label>
    <type>Text</type>
</CustomField>