David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Hospital_Asset_Number__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Asset_Number__c</fullName>
    <label>Hospital Asset Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>