David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Hospital_grade_plug__c.field-meta.xml
<CustomField>
    <fullName>Hospital_grade_plug__c</fullName>
    <label>Hospital grade plug</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Options_for_PMR_Form</valueSetName>
    </valueSet>
</CustomField>