David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Inbound_Type__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Type__c</fullName>
    <description>11/06/2025 (BW) - Operations uses this to understand what to do next with this work order</description>
    <label>Inbound Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Labor &amp; Travel</fullName>
            </value>
            <value>
                <fullName>Send Part for Repair</fullName>
            </value>
            <value>
                <fullName>Probe Evaluation</fullName>
            </value>
            <value>
                <fullName>System Install</fullName>
            </value>
            <value>
                <fullName>Preventative Maintenance</fullName>
            </value>
            <value>
                <fullName>Parts Request</fullName>
            </value>
            <value>
                <fullName>Quote Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>