David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Information_Display_For_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Information_Display_For_Work_Order__c</fullName>
    <formula>&quot;Last Completed Work Step: &quot; &amp;  Last_Completed_Work_Step__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Information Display For Work Order</label>
    <type>Text</type>
</CustomField>