David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Initial_Tech_Support_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Initial_Tech_Support_Attempt__c</fullName>
    <label>Initial Tech Support Attempt</label>
    <type>DateTime</type>
</CustomField>