David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Inpsect_probe_clamp__c.field-meta.xml
<CustomField>
    <fullName>Inpsect_probe_clamp__c</fullName>
    <label>Inpsect probe clamp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trophon_Form_Options</valueSetName>
    </valueSet>
</CustomField>