David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Inpsect_probe_clamp_com__c.field-meta.xml
<CustomField>
    <fullName>Inpsect_probe_clamp_com__c</fullName>
    <label>Inpsect probe clamp com</label>
    <type>TextArea</type>
</CustomField>