David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Inspect_accessories_peripherals_for_pro__c.field-meta.xml
<CustomField>
    <fullName>Inspect_accessories_peripherals_for_pro__c</fullName>
    <label>Inspect accessories, peripherals for pro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Options_for_PMR_Form</valueSetName>
    </valueSet>
</CustomField>