David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Inspect_airpath_for_any_residue__c.field-meta.xml
<CustomField>
    <fullName>Inspect_airpath_for_any_residue__c</fullName>
    <label>Inspect airpath for any residue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trophon_Form_Options</valueSetName>
    </valueSet>
</CustomField>