David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Inspect_airpath_for_any_residue_com__c.field-meta.xml
<CustomField>
    <fullName>Inspect_airpath_for_any_residue_com__c</fullName>
    <label>Inspect airpath for any residue com</label>
    <type>TextArea</type>
</CustomField>