David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Inspect_chamber_door_opens_closes_Com__c.field-meta.xml
<CustomField>
    <fullName>Inspect_chamber_door_opens_closes_Com__c</fullName>
    <label>Inspect chamber door opens closes Com</label>
    <type>TextArea</type>
</CustomField>