David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Inspect_chamber_seal__c.field-meta.xml
<CustomField>
    <fullName>Inspect_chamber_seal__c</fullName>
    <label>Inspect chamber seal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trophon_Form_Options</valueSetName>
    </valueSet>
</CustomField>