David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Inspect_gland_seal__c.field-meta.xml
<CustomField>
    <fullName>Inspect_gland_seal__c</fullName>
    <label>Inspect gland seal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trophon_Form_Options</valueSetName>
    </valueSet>
</CustomField>