David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Inspect_gland_seal_Com__c.field-meta.xml
<CustomField>
    <fullName>Inspect_gland_seal_Com__c</fullName>
    <label>Inspect gland seal Com</label>
    <type>TextArea</type>
</CustomField>