David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Inspect_nebulizer_cooling_fan__c.field-meta.xml
<CustomField>
    <fullName>Inspect_nebulizer_cooling_fan__c</fullName>
    <label>Inspect nebulizer cooling fan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trophon_Form_Options</valueSetName>
    </valueSet>
</CustomField>