David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Inspect_nebulizer_cooling_fan_Com__c.field-meta.xml
<CustomField>
    <fullName>Inspect_nebulizer_cooling_fan_Com__c</fullName>
    <label>Inspect nebulizer cooling fan Com</label>
    <type>TextArea</type>
</CustomField>