David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Inspect_outer_sheath_of_main_loom__c.field-meta.xml
<CustomField>
    <fullName>Inspect_outer_sheath_of_main_loom__c</fullName>
    <label>Inspect outer sheath of main loom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trophon_Form_Options</valueSetName>
    </valueSet>
</CustomField>