David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Inspect_outer_sheath_of_main_loom_Com__c.field-meta.xml
<CustomField>
    <fullName>Inspect_outer_sheath_of_main_loom_Com__c</fullName>
    <label>Inspect outer sheath of main loom Com</label>
    <type>TextArea</type>
</CustomField>