David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Inspect_Tech_Log_Comments__c.field-meta.xml
<CustomField>
    <fullName>Inspect_Tech_Log_Comments__c</fullName>
    <label>Inspect Tech Log Comments</label>
    <type>TextArea</type>
</CustomField>