David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Inspect_tubing_for_kinks_and_leakage__c.field-meta.xml
<CustomField>
    <fullName>Inspect_tubing_for_kinks_and_leakage__c</fullName>
    <label>Inspect tubing for kinks and leakage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trophon_Form_Options</valueSetName>
    </valueSet>
</CustomField>