David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Inspect_tubing_for_kinks_and_leakage_Com__c.field-meta.xml
<CustomField>
    <fullName>Inspect_tubing_for_kinks_and_leakage_Com__c</fullName>
    <label>Inspect tubing for kinks and leakage Com</label>
    <type>TextArea</type>
</CustomField>