David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Installed_Part_Number_3__c.field-meta.xml
<CustomField>
    <fullName>Installed_Part_Number_3__c</fullName>
    <label>Installed Part Number 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>