David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Installed_Part_Rev_3__c.field-meta.xml
<CustomField>
    <fullName>Installed_Part_Rev_3__c</fullName>
    <label>Installed Part Rev 3</label>
    <length>15</length>
    <type>Text</type>
</CustomField>