David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Intact_without_cracks_1__c.field-meta.xml
<CustomField>
    <fullName>Intact_without_cracks_1__c</fullName>
    <label>Intact without cracks 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>