David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Job_Classification__c.field-meta.xml
<CustomField>
    <fullName>Job_Classification__c</fullName>
    <label>Job Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job Class 1</fullName>
            </value>
            <value>
                <fullName>Job Class 2</fullName>
            </value>
            <value>
                <fullName>Routine</fullName>
            </value>
            <value>
                <fullName>Tech Support / Recurring Fault</fullName>
            </value>
            <value>
                <fullName>Call Out - Routine Fault</fullName>
            </value>
            <value>
                <fullName>Call Out - Major Fault</fullName>
            </value>
            <value>
                <fullName>Call Out - Recurring Fault</fullName>
            </value>
            <value>
                <fullName>Pending Customer Authorization</fullName>
            </value>
            <value>
                <fullName>Pre-Inspection Visit</fullName>
            </value>
            <value>
                <fullName>Probe Exchange</fullName>
            </value>
            <value>
                <fullName>Probe Repair</fullName>
            </value>
            <value>
                <fullName>Awaiting Parts</fullName>
            </value>
            <value>
                <fullName>Service Follow-Up</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Workshop / Recurring Fault</fullName>
            </value>
            <value>
                <fullName>System Update</fullName>
            </value>
            <value>
                <fullName>Triaged</fullName>
            </value>
            <value>
                <fullName>First Line Fix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>