David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Job_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Job_Subtype__c</fullName>
    <label>Job Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Customer Sales Calls</fullName>
            </value>
            <value>
                <fullName>Non - Billable Travel</fullName>
            </value>
            <value>
                <fullName>Non - Billable Tech Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>